--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-Projeto DevMedia site de pet-shop com :
+#Projeto DevMedia site de pet-shop com :
 
 
-* Modificando Elementos 
+* **Modificando Elementos** 
 
 
-* HTML 
-* CSS
-* VS CODE
+* **HTML** 
+* **CSS**
+* **VS CODE**
