--- a/README
+++ b/README
@@ -54,6 +54,44 @@ Um site institucional desenvolvido para a **Pet Boutique**, um petshop fictício
 
 ![Preview do site](https://via.placeholder.com/800x400?text=Preview+Pet+Boutique)
 
+
+# 🐾 Pet Boutique - Site Institucional
+
+Um site institucional desenvolvido para a **Pet Boutique**, um petshop fictício dedicado ao cuidado, bem-estar e estilo dos nossos melhores amigos de quatro patas. Este projeto demonstra o uso de **HTML5** e **CSS3** para construir uma experiência agradável, responsiva e visualmente atraente.
+
+---
+
+## 🌟 Funcionalidades
+
+- Página inicial com design atrativo e amigável  
+- Seções dedicadas para serviços, equipe, contato e localização  
+- Layout 100% responsivo para todos os dispositivos  
+- Estilo visual elegante com foco em usabilidade  
+
+---
+
+## 🚀 Tecnologias Utilizadas
+
+- **HTML5** – Estrutura semântica e acessível  
+- **CSS3** – Estilização moderna e responsiva  
+- **Google Fonts** – Tipografia personalizada  
+- **Responsividade Mobile-First** – Adaptado para smartphones e tablets  
+
+---
+
+## 📸 Preview
+
+![Preview do site](https://via.placeholder.com/800x400?text=Preview+Pet+Boutique)
+
+---
+
+## 🛠️ Como Executar
+
+1. Clone o repositório:
+   ```bash
+   git clone https://github.com/seu-usuario/pet-boutique.git
+
+
 ---
 
 ## 🛠️ Como Executar
