--- a/README
+++ b/README
@@ -1,100 +1,39 @@
-# 🐾 Pet Boutique
+<h1 align="center">🐶 Pet Boutique</h1>
+<p align="center">
+  Um site institucional moderno e responsivo para petshop, desenvolvido com <strong>HTML5</strong> e <strong>CSS3</strong>.
+</p>
 
-**Site institucional para petshop**  
-Desenvolvido com **HTML5** e **CSS3**, com foco em estética, organização e responsividade básica.
-
-![HTML5](https://img.shields.io/badge/HTML5-E34F26?logo=html5&logoColor=white)
-![CSS3](https://img.shields.io/badge/CSS3-1572B6?logo=css3&logoColor=white)
-
----
-
-## 🐶 Sobre o Projeto
-
-**Pet Boutique** é um site simples e encantador desenvolvido para representar uma loja pet de forma moderna e amigável.  
-O projeto oferece uma navegação agradável e responsiva com informações sobre os serviços oferecidos, produtos e formas de contato.
+<p align="center">
+  <img src="https://via.placeholder.com/800x400.png?text=Preview+Pet+Boutique" alt="Preview do site" width="80%">
+</p>
 
 ---
 
-## 🚀 Tecnologias Utilizadas
+## 📌 Sobre o Projeto
 
-- ✅ HTML5 semântico  
-- ✅ CSS3 com estilos personalizados  
-- ✅ Layout responsivo (mobile first)  
-- ✅ Imagens ilustrativas e ícones  
-
----
-
-## 📁 Estrutura de Pastas
-
-# 🐾 Pet Boutique - Site Institucional
-
-Um site institucional desenvolvido para a **Pet Boutique**, um petshop fictício dedicado ao cuidado, bem-estar e estilo dos nossos melhores amigos de quatro patas. Este projeto demonstra o uso de **HTML5** e **CSS3** para construir uma experiência agradável, responsiva e visualmente atraente.
-
----
-
-## 🌟 Funcionalidades
-
-- Página inicial com design atrativo e amigável
-- Seções dedicadas para serviços, equipe, contato e localização
-- Layout 100% responsivo para todos os dispositivos
-- Estilo visual elegante com foco em usabilidade
+A **Pet Boutique** é um projeto de site estático voltado para petshops que desejam ter presença digital com uma interface amigável, profissional e responsiva. Criado para apresentar serviços, localização, contato e cuidados com os pets.
 
 ---
 
 ## 🚀 Tecnologias Utilizadas
 
-- **HTML5** - Estrutura semântica e acessível
-- **CSS3** - Estilização moderna e responsiva
-- **Google Fonts** - Tipografia personalizada
-- **Responsividade Mobile-First** - Adaptado para smartphones e tablets
+- 🔹 HTML5 – Estrutura semântica e organizada  
+- 🔹 CSS3 – Estilização moderna com responsividade  
+- 🔹 Google Fonts – Tipografia elegante  
+- 🔹 Design Mobile-First – Layout adaptado para qualquer tela  
 
 ---
 
-## 📸 Preview
+## 🎯 Funcionalidades
 
-![Preview do site](https://via.placeholder.com/800x400?text=Preview+Pet+Boutique)
-
-
-# 🐾 Pet Boutique - Site Institucional
-
-Um site institucional desenvolvido para a **Pet Boutique**, um petshop fictício dedicado ao cuidado, bem-estar e estilo dos nossos melhores amigos de quatro patas. Este projeto demonstra o uso de **HTML5** e **CSS3** para construir uma experiência agradável, responsiva e visualmente atraente.
+- Página inicial com banner e chamada de ação  
+- Seções de serviços, equipe, contato e localização  
+- Layout clean e intuitivo  
+- Totalmente responsivo para desktop, tablet e celular  
 
 ---
 
-## 🌟 Funcionalidades
-
-- Página inicial com design atrativo e amigável  
-- Seções dedicadas para serviços, equipe, contato e localização  
-- Layout 100% responsivo para todos os dispositivos  
-- Estilo visual elegante com foco em usabilidade  
-
----
-
-## 🚀 Tecnologias Utilizadas
-
-- **HTML5** – Estrutura semântica e acessível  
-- **CSS3** – Estilização moderna e responsiva  
-- **Google Fonts** – Tipografia personalizada  
-- **Responsividade Mobile-First** – Adaptado para smartphones e tablets  
-
----
-
-## 📸 Preview
-
-![Preview do site](https://via.placeholder.com/800x400?text=Preview+Pet+Boutique)
-
----
-
-## 🛠️ Como Executar
-
-1. Clone o repositório:
-   ```bash
-   git clone https://github.com/seu-usuario/pet-boutique.git
-
-
----
-
-## 🛠️ Como Executar
+## 🖥️ Como Visualizar
 
 1. Clone o repositório:
    ```bash
